[gd_scene load_steps=25 format=3 uid="uid://tuxjaiqfg4pm"]

[ext_resource type="Script" uid="uid://dfdt3a54fvkue" path="res://scripts/btn_menu.gd" id="2_vjb58"]
[ext_resource type="Texture2D" uid="uid://bi5jgfe05vlc1" path="res://assets/logo.png" id="3_con2f"]
[ext_resource type="AudioStream" uid="uid://brvhnlir4avee" path="res://music/Intro.wav" id="3_g3eks"]
[ext_resource type="AudioStream" uid="uid://cti6x0cw45lmw" path="res://music/ES_Button Press Click, Tap, Video Game, Main Menu, Select, Positive 03 - Epidemic Sound.mp3" id="3_v86rl"]
[ext_resource type="Texture2D" uid="uid://cswekdk154pxu" path="res://assets/card.png" id="4_mhnvy"]
[ext_resource type="FontFile" uid="uid://loux203g2axa" path="res://fonts/BBHSansBogle-Regular.ttf" id="5_4ytvr"]
[ext_resource type="Texture2D" uid="uid://bphdyi0c6l8cw" path="res://assets/volume/box.png" id="5_g3eks"]
[ext_resource type="Texture2D" uid="uid://d0hn0jlgd6ndd" path="res://assets/triste.png" id="6_13sgg"]
[ext_resource type="Texture2D" uid="uid://cytnfowml8tfr" path="res://assets/help.png" id="9_i6lef"]
[ext_resource type="Texture2D" uid="uid://cby2od2iywhjm" path="res://assets/back.png" id="10_mj5lg"]
[ext_resource type="Texture2D" uid="uid://bv5mlxdmqjanw" path="res://assets/next.png" id="11_ufwb2"]

[sub_resource type="Theme" id="Theme_vjb58"]
default_font = ExtResource("5_4ytvr")
default_font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vjb58"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yqeox"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="LabelSettings" id="LabelSettings_mhnvy"]
font = ExtResource("5_4ytvr")
font_size = 32
font_color = Color(0.299547, 0.299547, 0.299547, 1)

[sub_resource type="Theme" id="Theme_mhnvy"]
default_font = ExtResource("5_4ytvr")

[sub_resource type="LabelSettings" id="LabelSettings_4ytvr"]
font = ExtResource("5_4ytvr")
font_color = Color(0.298039, 0.298039, 0.298039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mhnvy"]
bg_color = Color(0.136826, 0.136826, 0.136826, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.215902, 0.215902, 0.215902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ytvr"]
bg_color = Color(0.922547, 0.704908, 0.318158, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3eks"]
bg_color = Color(0.862242, 0.702491, 0.322073, 1)

[sub_resource type="LabelSettings" id="LabelSettings_v86rl"]
font = ExtResource("5_4ytvr")
font_color = Color(0.298039, 0.298039, 0.298039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v86rl"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="LabelSettings" id="LabelSettings_g3eks"]
font = ExtResource("5_4ytvr")
font_size = 28
font_color = Color(0.922957, 0.71819, 0.430931, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mj5lg"]
font = ExtResource("5_4ytvr")
font_color = Color(0.298039, 0.298039, 0.298039, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 656.0

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 648.0
color = Color(0.282353, 0.909804, 0.592157, 0.580392)

[node name="logo" type="Sprite2D" parent="."]
texture_filter = 2
position = Vector2(584, 193)
scale = Vector2(0.711914, 0.711914)
texture = ExtResource("3_con2f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
texture_filter = 1
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = 25.0
offset_right = 144.0
offset_bottom = 231.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_vjb58")
theme_override_constants/separation = 6
script = ExtResource("2_vjb58")

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 0
theme_override_styles/focus = SubResource("StyleBoxFlat_vjb58")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yqeox")
text = "Play"
flat = true

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 0
theme_override_styles/focus = SubResource("StyleBoxFlat_vjb58")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yqeox")
text = "Options"
flat = true

[node name="help" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 0
theme_override_styles/focus = SubResource("StyleBoxFlat_vjb58")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yqeox")
text = "Help"
flat = true

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 0.356863, 0.290196, 0.639216)
theme_override_constants/outline_size = 0
theme_override_styles/focus = SubResource("StyleBoxFlat_vjb58")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yqeox")
text = "Exit"
flat = true

[node name="sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_v86rl")
bus = &"sound"

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_g3eks")
autoplay = true
bus = &"music"

[node name="verification" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="verification"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.65098)

[node name="Card" type="Sprite2D" parent="verification"]
texture_filter = 1
position = Vector2(570, 337)
scale = Vector2(0.413694, 0.413694)
texture = ExtResource("6_13sgg")

[node name="Label" type="Label" parent="verification"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.5
offset_top = -48.0
offset_right = 131.5
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
text = "Are you sure
 you want
 to quit the game?"
label_settings = SubResource("LabelSettings_mhnvy")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="verification"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = 128.0
offset_right = 93.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_mhnvy")
theme_override_constants/separation = 48

[node name="cancel" type="Button" parent="verification/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(69, 0)
layout_mode = 2
text = "CANCEL"

[node name="exit" type="Button" parent="verification/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(69, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "YES"

[node name="option" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="option"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.65098)

[node name="Card" type="Sprite2D" parent="option"]
texture_filter = 1
position = Vector2(587, 340)
scale = Vector2(0.843795, 0.843795)
texture = ExtResource("4_mhnvy")

[node name="VBoxContainer" type="VBoxContainer" parent="option"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -13.0
offset_right = 88.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="sound_ctrl" type="HBoxContainer" parent="option/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_constants/separation = 15

[node name="sound" type="Label" parent="option/VBoxContainer/sound_ctrl"]
texture_filter = 1
layout_mode = 2
text = "Sound"
label_settings = SubResource("LabelSettings_4ytvr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="sound_slider" type="HSlider" parent="option/VBoxContainer/sound_ctrl"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_mhnvy")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_4ytvr")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_g3eks")

[node name="music_ctrl" type="HBoxContainer" parent="option/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_constants/separation = 15

[node name="sound" type="Label" parent="option/VBoxContainer/music_ctrl"]
texture_filter = 1
layout_mode = 2
text = "Music"
label_settings = SubResource("LabelSettings_4ytvr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="music_slider" type="HSlider" parent="option/VBoxContainer/music_ctrl"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_mhnvy")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_4ytvr")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_g3eks")

[node name="HBoxContainer3" type="HBoxContainer" parent="option/VBoxContainer"]
layout_mode = 2

[node name="mute" type="Label" parent="option/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "MUTE"
label_settings = SubResource("LabelSettings_v86rl")

[node name="Button" type="Button" parent="option/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_v86rl")
icon = ExtResource("5_g3eks")
flat = true
icon_alignment = 1

[node name="Label_option" type="Label" parent="option"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -87.0
offset_right = 42.5
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2
text = "Options"
label_settings = SubResource("LabelSettings_g3eks")

[node name="quit_opt" type="Button" parent="option"]
texture_filter = 1
custom_minimum_size = Vector2(69, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = 128.5
offset_right = 34.5
offset_bottom = 159.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_4ytvr")
theme_override_font_sizes/font_size = 18
text = "OK"

[node name="help" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="help"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.65098)

[node name="Help" type="Sprite2D" parent="help"]
position = Vector2(576, 349)
scale = Vector2(0.455331, 0.455331)
texture = ExtResource("9_i6lef")

[node name="VBoxContainer" type="VBoxContainer" parent="help"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.5
offset_top = -69.0
offset_right = 117.5
offset_bottom = 203.0
grow_horizontal = 2
grow_vertical = 2

[node name="help_desc" type="Label" parent="help/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 230)
layout_mode = 2
text = "Help1"
label_settings = SubResource("LabelSettings_mj5lg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="help/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="back" type="Button" parent="help/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
icon = ExtResource("10_mj5lg")

[node name="next" type="Button" parent="help/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
icon = ExtResource("11_ufwb2")

[node name="menu" type="Button" parent="help/VBoxContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_4ytvr")
theme_override_font_sizes/font_size = 20
text = "Menu"

[connection signal="pressed" from="VBoxContainer/Play" to="VBoxContainer" method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="VBoxContainer" method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/help" to="VBoxContainer" method="_on_help_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="VBoxContainer" method="_on_quit_pressed"]
[connection signal="finished" from="music" to="VBoxContainer" method="_on_music_finished"]
[connection signal="pressed" from="verification/HBoxContainer/cancel" to="VBoxContainer" method="_on_cancel_pressed"]
[connection signal="pressed" from="verification/HBoxContainer/exit" to="VBoxContainer" method="_on_exit_pressed"]
[connection signal="value_changed" from="option/VBoxContainer/sound_ctrl/sound_slider" to="VBoxContainer" method="_on_sound_slider_value_changed"]
[connection signal="value_changed" from="option/VBoxContainer/music_ctrl/music_slider" to="VBoxContainer" method="_on_music_slider_value_changed"]
[connection signal="pressed" from="option/VBoxContainer/HBoxContainer3/Button" to="VBoxContainer" method="_on_button_pressed"]
[connection signal="pressed" from="option/quit_opt" to="VBoxContainer" method="_on_quit_opt_pressed"]
[connection signal="pressed" from="help/VBoxContainer/HBoxContainer/back" to="VBoxContainer" method="_on_back_pressed"]
[connection signal="pressed" from="help/VBoxContainer/HBoxContainer/next" to="VBoxContainer" method="_on_next_pressed"]
[connection signal="pressed" from="help/VBoxContainer/HBoxContainer/menu" to="VBoxContainer" method="_on_menu_pressed"]
